--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "predeploy": "npm run build",
     "deploy": "touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
@@ -20,6 +21,8 @@
     "eslint": "8.40.0",
     "eslint-config-next": "14.2.14",
     "next": "^14.2.14",
+    "next-seo": "^6.8.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
