--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "8.40.0",
     "eslint-config-next": "14.2.14",
+    "framer-motion": "^12.15.0",
     "next": "^14.2.14",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
