--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.20",
     "eslint": "8.40.0",
     "eslint-config-next": "14.2.14",
