--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "14.2.14",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "next": "^14.2.14",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
