--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "eslint": "8.40.0",
     "eslint-config-next": "14.2.14",
     "framer-motion": "^12.15.0",
+    "glightbox": "^3.3.1",
     "lucide-react": "^0.511.0",
-    "next": "^14.2.14",
+    "next": "^15.3.3",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.47",
@@ -33,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.8",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
   },
